modification du deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,10 @@ jobs:
         env:
           REACT_APP_WEB3FORMS_KEY: ${{ secrets.WEB3FORMS_KEY }}
           CI: false
-        run: npm run build
+          PUBLIC_URL: /taib-massages/
+        run: |
+          echo "Building with PUBLIC_URL: $PUBLIC_URL"
+          npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -48,6 +51,7 @@ jobs:
           force_orphan: true
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'Deploy to GitHub Pages'
 
       - name: Deploy to GitHub Pages (Alternative)
         if: github.ref == 'refs/heads/main'
