--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-seo": "^1.0.11",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
