--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,26 @@
 {
-  "name": "Taib-massages",
   "short_name": "Taib-massages",
-  "description": "Centre de bien-être spécialisé en massages et cours de Pilates à Saint-Étienne",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#f6e6d1",
-  "theme_color": "#5d795d",
+  "name": "Taib-massages - Spécialiste de bien-être",
+  "description": "Centre de bien-être spécialisé en massages et cours de Pilates à Paris 18e",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ]
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#5d795d",
+  "background_color": "#ffffff"
 }
