Modification du package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Taib-massages.github.io/Accueil/",
+  "homepage": "https://taib-massages.github.io/Accueil/",
   "name": "taib-massages",
   "version": "0.1.0",
   "private": true,
